...
            _scheduleTime = State(initialValue: false)
        }
    }
    
    var body: some View {
        VStack(alignment: .leading) {
            TextField("Название задачи", text: $name)
                .font(.system(size: 30))
                .fontWeight(.heavy)
                .padding(.leading)
            Text(selectedItem?.dueDate?.formatted(date: .abbreviated, time: .shortened) ?? "")
                .font(.system(size: 7))
                .opacity(0.3)
...
                Section(header: Text("Завершено")) {
                    Text(selectedItem?.completedDate?.formatted(date: .abbreviated, time: .shortened) ?? "")
                        .foregroundColor(.green)
                }
            } else {
                Section() {
                    Button("Сохранить", action: saveAction)
                        .font(.headline)
                        .frame(maxWidth: .infinity, alignment: .center)
                }
            }
        }
        .padding()
...
