...
                }
                ZStack {
                    Text("\(items.count) задач")
                    HStack {
                        NavigationLink(destination: TaskEditView(passedItem: nil, initialDate: Date())
                            .environmentObject(dateHolder)) {
                                Image(systemName: "square.and.pencil")
                                    .environmentObject(dateHolder)
                                    .font(.system(size: 25))
                        }
                        .frame(width: 44, height: 44)
                    }
                    .frame(maxWidth: .infinity, alignment: .bottomTrailing)
                }
            }
            .navigationTitle("Задачи")
        }
    }
    
    private func deleteItems(offsets: IndexSet) {
        withAnimation {
            offsets.map { items[$0] }.forEach(viewContext.delete)
...
